--- a/WordleWordRecommend/MainWindow.xaml
+++ b/WordleWordRecommend/MainWindow.xaml
@@ -18,8 +18,8 @@
         <DockPanel Grid.Column="0" Margin="0" Background="White">
             <StackPanel>
                 <Image Source="wordleWhite.png"></Image>
-                <Button Content="{Binding PlayGameContent}" Command="{Binding InsertByTextCommand}" Margin="2 15 2 10"/>
-                <Button Content="{Binding WordFinderContent}" Command="{Binding InsertByFileCommand}" Margin="2 2 2 10"/>
+                <Button Content="{Binding PlayGameContent}" Command="{Binding PlayGameCommand}" Margin="2 15 2 10"/>
+                <Button Content="{Binding WordFinderContent}" Command="{Binding WordFinderCommand}" Margin="2 2 2 10"/>
             </StackPanel>
         </DockPanel>
 
